# ai-dev-guardian

./: .gitignore  README.md  pyproject.toml
docs/: 00-vision.md  01-setup-local.md  02-architecture.md  03-security-model.md  90-antigraviti-playbook.md
guardian/: __init__.py  cli.py
guardian/ai/: __init__.py  formatter.py  ollama_provider.py  prompts.py  provider.py  redaction.py
guardian/scan/: __init__.py  ci_checks.py  filesystem.py  masking.py  metrics.py  profile.py  reporter.py  rules.py  rules_engine.py  security.py  semgrep_integration.py
rulesets/: baseline.yml  security.yml  semgrep-basic.yml
tests/: test_ai_cli.py  test_scan_smoke.py
