[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-dev-guardian"
version = "0.1.1"
description = "Local-first scanner for repository quality and security risks"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "AI Dev Guardian" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
packages = ["guardian", "guardian.scan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
